--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <app-root></app-root>
+    <app-root class="appRoot"></app-root>
+    <div class="bodyFehlermeldung">
+        <p>Fehlermeldung: Bitte verwenden Sie einen Monitor mit einer Mindestbreite von 1280 Pixel.</p>
+
+    </div>
 </body>
 
 </html>
