--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
     <app-root class="appRoot"></app-root>
     <div class="bodyFehlermeldung">
-        <p>Fehlermeldung: Bitte verwenden Sie einen Monitor mit einer Mindestbreite von 1280 Pixel.</p>
+        <p>Fehlermeldung: Bitte verwenden Sie einen Monitor mit einer Mindestbreite von 1280 Pixel und einer Mindesthöhe von 600 Pixel oder skalieren Sie die Anzeige herunter.</p>
 
     </div>
 </body>
