--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="utf-8">
@@ -17,7 +17,6 @@
     <app-root class="appRoot"></app-root>
     <div class="bodyFehlermeldung">
         <p>Fehlermeldung: Bitte verwenden Sie einen Monitor mit einer Mindestbreite von 1280 Pixel und einer Mindesthöhe von 600 Pixel oder skalieren Sie die Anzeige herunter.</p>
-
     </div>
 </body>
 
